INGRESS-KAREEM/httpd-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deployment
  labels:
    type: httpd-apache-server
    author: kareem
spec:
  replicas: 1
  selector:
    matchLabels:
      type: apacheserver
  template:
    metadata:
      name: httpd-pod
      labels:
        type: apacheserver
    spec:
      containers:
       - name: myhttpd
         image: httpd
         ports:
          - containerPort: 80
