INGRESS-KAREEM/nginx-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels: 
    type: nginx-appserver
spec:
  replicas: 1
  selector:
    matchLabels:
      type: webserver
  template:
    metadata:
      name: nginx-pod
      labels:
        type: webserver
    spec:
      containers:
      - name: mynginx
        image: nginx
        ports:
          - containerPort: 80
