INGRESS-KAREEM/tomcat-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment
  labels:
    type: tomcat-appserver
    author: kareem
spec:
  replicas: 1
  selector:
    matchLabels:
      type: appserver
  template:
    metadata:
      name: tomcat-pod
      labels: 
        type: appserver
    spec:
      containers:
        - name: mytomee
          image: tomee
          ports:
           - containerPort: 8080
