INGRESS-KAREEM/nginx-service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: nginx-service
  labels:
    author: kareem
spec:
  type: ClusterIP
  ports:
    - name: tomcat
      targetPort: 80
      port: 80
  selector:
    type: webserver
