INGRESS-KAREEM/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
   - host: tomcat.example.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: tomcat-service
             port:
               number: 80
   - host: nginx.example.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: nginx-service
             port:
               number: 80
   - host: httpd.example.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: httpd-service
             port:
               number: 80
   - host: app.example.com
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: app1-service
             port:
               number: 80
